--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,37 +1,9 @@
 version: 2.1
-jobs:
-  manifest_pull_request:
-    docker:
-      # specify the version you desire here
-      - image: cimg/base:stable-18.04
-
-    working_directory: ~/
-
-    environment:
-      GH_CLI_VERSION: "0.11.1"
-
-    parameters:
-      env:
-        default: eks
-        description: Kubernetes environment (eks, minikube, etc)
-        type: string
-
-    steps:
-      # Slack
-      - slack/notify:
-          channel: C015JGRS4VA
-          color: '#42e2f4'
-          mentions: 'U23ACBMB5,U7CCVF98S'
-          message: k8s manifest編集してPR出すで
-          webhook: ${SLACK_WEBHOOK}
 
 orbs:
-  slack: circleci/slack@3.4.2
   signalfx: kikeyama/signalfx@0.1.1
   splunk: kikeyama/splunk@0.1.0
   aws-ecr: circleci/aws-ecr@6.12.2
-  kube: circleci/kubernetes@0.11.1
-  aws-cli: circleci/aws-cli@1.2.1
 
 workflows:
   main:
@@ -52,32 +24,14 @@ workflows:
             branches:
               only: 
                 - master
-      - slack/approval-notification:
-          name: slack_approval_notification
-          mentions: U23ACBMB5
-          message: Pending approval
-          webhook: ${SLACK_WEBHOOK}
-          context: kikeyama-context
-          requires:
-            - aws-ecr/build-and-push-image
-      - hold:
-          type: approval
-          requires:
-            - slack_approval_notification
-      - manifest_pull_request:
-          env: eks
-          context: kikeyama-context
-          requires:
-            - hold
       - signalfx/workflow-event:
           signalfx_access_token: '${SIGNALFX_ACCESS_TOKEN}'
           signalfx_realm: '${SIGNALFX_REALM}'
-          service: spring-sfx-demo
+          service: grpc-sfx-demo
           event_type: deploy
           context: kikeyama-context
           requires:
-            - hold
-            - manifest_pull_request
+            - aws-ecr/build-and-push-image
       - splunk/workflow-event:
           subject: notificatoin from main workflow
           message: Successfully finisheed deploying to my cluster
@@ -88,5 +42,4 @@ workflows:
           splunk_index: circleci
           context: kikeyama-context
           requires:
-            - hold
-            - manifest_pull_request
+            - aws-ecr/build-and-push-image
