--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,12 @@ jobs:
     environment:
       GH_CLI_VERSION: "0.11.1"
 
+    parameters:
+      env:
+        default: eks
+        description: Kubernetes environment (eks, minikube, etc)
+        type: string
+
     steps:
       # Slack
       - slack/notify:
@@ -40,7 +46,7 @@ jobs:
       - run:
           name: update manifest
           command: |
-            cd ${GITHUB_REPOSITORY}/${APP_DIR}
+            cd ${GITHUB_REPOSITORY}/${APP_DIR}/<<parameters.env>>
             git checkout -b gitops-${GITHUB_USERNAME}-${CIRCLE_SHA1}
             # Set new image tag
             ~/kustomize edit set image ${AWS_ECR_ACCOUNT_URL}/${AWS_ECR_REPOSITORY}:${CIRCLE_SHA1}
